--- a/TopCourses/index.html
+++ b/TopCourses/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/course_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top-Courses</title>
+    <title>Study-Vault</title>
   </head>
   <body>
     <div id="root"></div>
